fix: 🐛 categories no-wrap

--- a/src/Content/Content.module.scss
+++ b/src/Content/Content.module.scss
@@ -5,7 +5,7 @@
   }
 
   .categories-wrapper {
-    @apply flex gap-2;
+    @apply flex flex-wrap gap-2;
   }
 
   .description {
